*eclipse-sdk-bin-4.2.1 (21 Oct 2012)

  21 Oct 2012; Manuel Rueger (mrueg) gentoo@rueg.eu
  +eclipse-sdk-bin-4.2.1.ebuild, +files/eclipse-bin-4.2,
  +files/eclipserc-bin-4.2, +metadata.xml:
  dev-util/eclipse-sdk-bin: Ebuild from java-overlay with minor changes