@@ -1,7 +1,7 @@
 AUX eclipse-bin-4.2 1396 SHA256 e9b874f551d692a076aed08422b66a2d7a049b707a72eaf650206c2b92ed4968 SHA512 387bc4bc674b4c3d6f335de0198bfda41ee601ab07ae1f878b17e5f25bb11677eb7147f8ac02be8403e592383bcabc4f38870018881e4cc5b16dbebb5c9253f2 WHIRLPOOL 5b3c2c7e3cdca526143417cc16e90d4d8ce6c2484afac46ee7a1e78d6cfbb2ba511944c8fdbc3bb40c1d9f442e90bfd6296b8ec6062e6c6a8427e9d3d09b06be
 AUX eclipserc-bin-4.2 858 SHA256 0aea733c968ca064ad5ca95d5895778ecf7387826198b512e98d0cbb7dd353f1 SHA512 8705aac02f998bf43d797c9c13592927e73154a1c908d2ac85544b6e197b249b20bc6f189d11eea4a48a76f184ac818d145fa6c05d4980bfe9a542eb9f42dd7b WHIRLPOOL 5dabd6bf5c6d584221192ee6c84c4defb9c011d465fef2679745161f9e38b88fd420cca803367f9ae13ec71036dbd3b8b8fc8fe7e6d47bb570b7b6438d638f7a
-DIST eclipse-java-juno-SR1-linux-gtk-4.2.1.tar.gz 156518776 SHA256 61b46cc780dcd08834bd6a1bfb152fb78412f20459b048be416582020f3bf7c1 SHA512 a0b45dd49719e9b13ed0637c4d99216e246aafd07e8111babba73e7c8187123f8b1bd815be5d105438b5534bdaa18e5c84c47744c3fdaad3eeb18ef64e827cd4 WHIRLPOOL 7c061111f8b6059eba1edcfc7da462959bda0b6d4dd451cf52719807937f27509ef38a4a85034e7b72e6e3cac728c11a806eba3aa6a72cf1d036e99464f87410
-DIST eclipse-java-juno-SR1-linux-gtk-x86_64-4.2.1.tar.gz 156737238 SHA256 83a80b9e18563951031152dd982dbf4f5959f33ca3efdfd09f5fd3ba29fd185f SHA512 5a548af721bba8266c62a7cc9ef9bcef9e4e1a76ba4ebaae8415896c7f1b2a65bce2fd1518be31aae25bd51d85b97bdb8bc2f504a23ee0d3d0fa46e3a0dc1cc5 WHIRLPOOL f7b1482d6004e2e1648380acb8ca5990fc087b9d4446d7f6201e66421c4256cc6cd100fb0c74457951780bd3bb4c24899f50da2cca251cea7f5c41f116b0ea66
-EBUILD eclipse-sdk-bin-4.2.1.ebuild 1122 SHA256 c1b1155d12e170e4f77a8db40c84ccbca50c7f581375f53a02782760ec48f0f9 SHA512 bdeb2649264ad21cbc9525e4711bbffd91f1a8ba5ead7908ae13a7bbf5b52b0be33bad8689bbf86cfe8090d0c194eeaaa871930f5f49c5d97647a50898b4947b WHIRLPOOL 97afa8bedd300b02c5232993f65b39548f09f566404c3a778ae194269e8c94c737dd9c6e2c229564c78f696f84ca1a3ac20582d24fdf32c81510d64e89cf327d
-MISC ChangeLog 262 SHA256 39446460ebd5fb02817b872e4c5c7b6d5a539f68610b8e16eab0a00ac547cfe3 SHA512 6df6ff4a7d5762cd1116feca7bc5f4a0b28b1c4e8ba1c177f241c906797ba940ec74375a33cce0eb24e746d46a9a3429be0f35542f41c59caa6cf513448ebf52 WHIRLPOOL 5da2b236e4c04b8e915f01a2b8c8a76406e354a465fda73d6d5961b314f28786d427ba27588d91bd5e91f99b875082c3b71bccc78dbd23a483bca01bb6c80975
+DIST eclipse-java-juno-SR2-linux-gtk-4.2.2.tar.gz 157460095 SHA256 444195725e47a0d6a7e6a1c4c620926c0dd0d900be0d6567264d9c9366581cf1 SHA512 1dbd7241e92451c9b2526267f3b0479573fc449ed99ac3cf00646bdc7b3c8bf805c382d64e67554a0499d581a1b7cb48338c0cc3f7a0e782c6278f3c3dec3a02 WHIRLPOOL b95892bfebe80606e2148f51aac5c390513fe5aa12ed9cafd9f591412bf91f5b76c3add9e28a790cbf2f8eb317e7fbe0ac6204e590558e3f0e3da6909dae00d5
+DIST eclipse-java-juno-SR2-linux-gtk-x86_64-4.2.2.tar.gz 157681180 SHA256 3a387e0bc7b4d08ff0f532573e7d552aea0bf419099eb1d20d76e403693b30a1 SHA512 b4fe8096635f6d7c13385610fcbca08ea3db0b9dbb737d60ec2078c595aa88cfea48164bf14705d890265c81fa3c6ef756b5d3bec8816c8bc0f840903a8c8c8f WHIRLPOOL 5235dd01c30ffaf7b1d7738c9864485105fbeb89a36a810ed9be5504dd26dc100fb83ab7f47ce620a901836f28657f8780270a45ebd1caed0a830bf44949c3a2
+EBUILD eclipse-sdk-bin-4.2.2.ebuild 1259 SHA256 837742bb5864475bb9f7b2abd8f18d64c9d8a7151aea9cffc6aae0ca0e3d2e6e SHA512 2c5db2b059cc6681ab928c1cc2aa2ae151a5df5c2f71d66a2bb3cf4024f08cd3f5f4c6770548c8c65828ad05280376b0a9a03417c497ea1e3965267fb1ab17f2 WHIRLPOOL ad5af28b10f9c0cce9c319170c31bbd4de40671cc652270c536cf136b63a84dc46a2f48d092f0f9ab101ce4bc8ce0424cbbfaf9b54f2a2dedb8dadf266d1100d
+MISC ChangeLog 484 SHA256 c40d0bd5dcedd6ba791499c59b72143217b5af2e7562658dfd58410568ebf71e SHA512 4c2cd949be6c6aac177de715c5c5be8ac73af0601de8d67196b34c875e3f3d12470693a910f0241f6662a700575491bc4101de6d927c3664e471601d5cac4611 WHIRLPOOL 4c7dadcef9c5a46a945fb01fcfbbf47ebe6dbf1db3636953b9f9f58fb521bb41df58cc2142ea247218a69eac445891b427e81d045b0064e38cc96ef1096f6446
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
