@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=4
+EAPI=5
 
 inherit eutils
 
@@ -41,5 +41,9 @@ src_install() {
 	doins "${FILESDIR}"/eclipserc-bin-${SLOT}
 
 	dobin "${FILESDIR}"/eclipse-bin-${SLOT}
-	make_desktop_entry "eclipse-bin-${SLOT}" "Eclipse ${PV} (bin)" "${dest}/icon.xpm"
+	make_desktop_entry "eclipse-bin-${SLOT}" "Eclipse ${PV} (bin)" "${dest}/icon.xpm"	
+	
+	# At least CDT needs the following dir to exist to be installable, doesn't
+	# need to be writable though.
+	keepdir "${dest}"/dropins
 }
